removed wrap helpers to fix wrapping

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ td {
   text-align: left;
   padding: 5px;
   font-size: 12px;
+  width: 200px;
 }
 
 #dhammaTitle {
